--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babylon": "global:BABYLON"
   },
   "dependencies": {
+    "dotenv": "^2.0.0",
     "node-static": "^0.7.7",
     "q": "^1.4.1",
     "socket.io": "^1.4.8"
